Simplify Expo configs

--- a/CreativeSpark/app.json
+++ b/CreativeSpark/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CircuitPuzzle",
-    "slug": "CircuitPuzzle",
+    "name": "CreativeSpark",
+    "slug": "CreativeSpark",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
