--- a/LingoOnTheGo/app.json
+++ b/LingoOnTheGo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CircuitPuzzle",
-    "slug": "CircuitPuzzle",
+    "name": "LingoOnTheGo",
+    "slug": "LingoOnTheGo",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
