Remove binary assets and references

--- a/ComicCrafterApp/app.json
+++ b/ComicCrafterApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "MicroCoach",
-    "slug": "MicroCoach",
+    "name": "ComicCrafter",
+    "slug": "ComicCrafterApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
